--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,13 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--color-slate-400);
 }
+
+@keyframes loading {
+  0% {
+    width: 0%;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
